--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,97 +1,4 @@
 <section class="contacts" id="contacts">
-	<div class="container">
-		<h2 class="contacts__title visually-hidden">contacts</h2>
-		<ul class="contact__card-list list">
-			<li class="contacts__company">
-				<div class="contacts__wrap">
-					<div class="contacts__name">
-						<p class="name">cafe</p>
-					</div>
-					<div class="contacts__location">
-						<p class="contacts__location-text">Chicago</p>
-						<a href="10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA" class="contacts__location-link link">10340
-							Ridgeland Ave, Chicago<br>Ridge, IL 60415,
-							USA</a>
-					</div>
-					<div class="contacts__week">
-						<ul class="contacts__week-list list">
-							<li class="contacts__week-item">
-								<p class="working-days">Monday - Friday</p>
-								<p class="working-time">06:00 AM - 10:00 PM</p>
-							</li>
-							<li class="contacts__week-item">
-								<p class="working-days">Saturday - Sunday</p>
-								<p class="working-time">08:00 AM - 16:00 PM</p>
-							</li>
-						</ul>
-					</div>
-					<address class="contacts__address">
-						<a href="tel:+61(0) 383 766 284" class="address-link">+61(0) 383 766 284</a>
-						<a href="mailto:noreply@envato.com" class="address-link">noreply@envato.com</a>
-					</address>
-				</div>
-			</li>
-			<li class="contacts__company">
-				<div class="contacts__wrap">
-					<div class="contacts__name-foodtruck">
-						<p class="name">food truck</p>
-					</div>
-					<div class="contacts__location">
-						<p class="contacts__location-text">Los Angeles</p>
-						<a href="1003 Manhattan Ave, Manhattan Beach, CA 90263, USA" class="contacts__location-link link">1003
-							Manhattan Ave, Manhattan<br>Beach, CA 90263,
-							USA</a>
-					</div>
-					<div class="contacts__week">
-						<ul class="contacts__week-list list">
-							<li class="contacts__week-item">
-								<p class="working-days">Monday - Friday</p>
-								<p class="working-time">06:00 AM - 10:00 PM</p>
-							</li>
-							<li class="contacts__week-item">
-								<p class="working-days">Saturday - Sunday</p>
-								<p class="working-time">08:00 AM - 16:00 PM</p>
-							</li>
-						</ul>
-					</div>
-					<address class="contacts__address">
-						<a href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
-						<a href="mailto:noreply@envato.com">noreply@envato.com</a>
-					</address>
-				</div>
-			</li>
-			<li class="contacts__company">
-				<div class="contacts__wrap">
-					<div class="contacts__name">
-						<p class="name">cafe</p>
-					</div>
-					<div class="contacts__location">
-						<p class="contacts__location-text">New York</p>
-						<a href="726 Sterling Pl, Brooklyn, NY 11222, USA" class="contacts__location-link link">726
-							Sterling Pl, Brooklyn, NY<br>11222, USA</a>
-					</div>
-					<div class="contacts__week">
-						<ul class="contacts__week-list list">
-							<li class="contacts__week-item">
-								<p class="working-days">Monday - Friday</p>
-								<p class="working-time">06:00 AM - 10:00 PM</p>
-							</li>
-							<li class="contacts__week-item">
-								<p class="working-days">Saturday - Sunday</p>
-								<p class="working-time">08:00 AM - 16:00 PM</p>
-							</li>
-						</ul>
-					</div>
-					<address class="contacts__address">
-						<a href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
-						<a href="mailto:noreply@envato.com">noreply@envato.com</a>
-					</address>
-				</div>
-			</li>
-		</ul>
-	</div>
-
-<section class="contacts">
   <div class="container">
     <h2 class="contacts__title visually-hidden">contacts</h2>
     <ul class="contact__card-list list">
@@ -103,7 +10,7 @@
           <div class="contacts__location">
             <p class="contacts__location-text">Chicago</p>
             <a
-              href="10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA"
+              href="https://www.google.com/maps/dir/49.2307466,28.3990018/10340+Ridgeland+Ave,+Chicago+Ridge,+IL+60415,+Сполучені+Штати+Америки/@16.6160909,-102.609051,3z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x880e39ad302b2c19:0xc808e9b14d04eb2b!2m2!1d-87.7797405!2d41.7034016"
               class="contacts__location-link link"
               >10340 Ridgeland Ave,<br />Chicago Ridge, IL 60415, USA</a
             >
@@ -138,7 +45,7 @@
           <div class="contacts__location">
             <p class="contacts__location-text">Los Angeles</p>
             <a
-              href="1003 Manhattan Ave, Manhattan Beach, CA 90263, USA"
+              href="https://www.google.com/maps/dir/49.2307466,28.3990018/1003+Manhattan+Ave,+Manhattan+Beach,+CA+90266,+Сполучені+Штати+Америки/@4.4217465,-129.9841266,3z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x80c2b3eca6743829:0x98448969b9b4373d!2m2!1d-118.4103286!2d33.8835263"
               class="contacts__location-link link"
               >1003 Manhattan Ave, Manhattan<br />Beach, CA 90263, USA</a
             >
@@ -173,7 +80,7 @@
           <div class="contacts__location">
             <p class="contacts__location-text">New York</p>
             <a
-              href="726 Sterling Pl, Brooklyn, NY 11222, USA"
+              href="https://www.google.com/maps/dir/49.2307466,28.3990018/726+Sterling+Pl,+Brooklyn,+NY+11216,+Сполучені+Штати+Америки/@15.526483,-96.6107425,3z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x89c25b9e1735b38f:0xb5fe454b88e9c2c0!2m2!1d-73.954734!2d40.6726938"
               class="contacts__location-link link"
               >726 Sterling Pl, Brooklyn, NY<br />11222, USA</a
             >
@@ -202,14 +109,14 @@
       </li>
     </ul>
     <div class="contacts__buttons">
-      <button class="contacts__button" type="button" data-location-modal-open>
+      <button class="contacts__button-loc" type="button" data-location-modal-open>
         Our Locations
         <svg class="contacts__button-icon" width="12" height="12">
           <use href="./images/icons.svg#icon-arrow"></use>
         </svg>
       </button>
       <button
-        class="contacts__button contacts__button-second"
+        class="contacts__button-franch"
         type="button"
         data-franchise-modal-open
       >
