--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,21 +1,22 @@
-@import './common';
-@import './utils/fonts';
-@import './utils/colors';
-@import './utils/breakpoints';
-@import './utils/reset';
-@import './utils/visually-hidden';
-@import './utils/container';
-@import './utils/backdrop';
+@import "./common";
+@import "./utils/fonts";
+@import "./utils/colors";
+@import "./utils/breakpoints";
+@import "./utils/reset";
+@import "./utils/visually-hidden";
+@import "./utils/container";
+@import "./utils/backdrop";
 
-@import './components/hero-header';
-@import './components/products';
-@import './components/about';
-@import './components/advantages';
-@import './components/gallery';
-@import './components/customer-reviews';
-@import './components/contacts';
-@import './components/footer';
-@import './components/read-more-modal';
-@import './components/ingredients-modal';
-@import './components/franchise-modal';
-@import './components/location-modal';
+@import "./components/hero-header";
+@import "./components/buy-now-modal";
+@import "./components/products";
+@import "./components/about";
+@import "./components/advantages";
+@import "./components/gallery";
+@import "./components/customer-reviews";
+@import "./components/contacts";
+@import "./components/footer";
+@import "./components/read-more-modal";
+@import "./components/ingredients-modal";
+@import "./components/franchise-modal";
+@import "./components/location-modal";
