--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -39,7 +39,7 @@
 						<li class="burger__item"><a href="#products">Our products</a></li>
 						<li class="burger__item"><a href="#contacts">Contact</a></li>
 					</ul>
-					<button class="burger__order" type="button">
+					<button class="burger__order" type="button" data-buy2-modal-open>
 						<span class="order__text">Buy now</span>
 						<svg height="12" width="12">
 							<use href="./images/icons.svg#icon-arrow"></use>
@@ -48,7 +48,7 @@
 				</div>
 
 			</div>
-			<button class="order" type="button">
+			<button class="order" type="button" data-buy-modal-open>
 				Buy now
 				<svg class="order__arrow" height="12" width="12">
 					<use href="./images/icons.svg#icon-arrow"></use>
@@ -117,4 +117,5 @@
 	</picture>
 </section>
 
+<!-- Up button -->
 <a class="back-to-top" href="#"></a>
