--- a/src/partials/read-more-modal.html
+++ b/src/partials/read-more-modal.html
@@ -1,9 +1,20 @@
 <div class="backdrop is-hidden" data-modal>
   <div class="read-more-modal">
-    <button type="button" data-modal-close>
-      <svg width="20" height="20">
+    <button type="button" class="read-more-modal-close" data-modal-close>
+      <svg class="read-more-modal-close__icon" width="20" height="20">
         <use href="./images/icons.svg#icon-modal-cross"></use>
       </svg>
     </button>
+    <p class="read-more-modal__title">How it’s made?</p>
+    <video
+      class="read-more-video"
+      src="https://youtu.be/p2vpqKBPj4U"
+      preload="auto"
+    ></video>
+    <p class="read-more-modal__text">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+    </p>
   </div>
 </div>
