--- a/src/sass/components/_ingredients-modal.scss
+++ b/src/sass/components/_ingredients-modal.scss
@@ -190,6 +190,7 @@
   border-radius: 10px;
   padding-left: 10px;
   padding-top: 10px;
+  resize: none;
   @media screen and (min-width: $tablet) {
     width: 368px;
   }
