--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -25,7 +25,7 @@
           <div>
             <h3 class="product-item-title">ice coffee</h3>
             <p class="product-item-subtitle">
-              Fragrant invigorating drink, created from 100% natural ingredients
+              Fragrant invigorating drink created from 100% natural ingredients
               without the use of preservatives and flavor enhancers
             </p>
           </div>
