--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -39,7 +39,7 @@
 						<li class="burger__item"><a href="#products">Our products</a></li>
 						<li class="burger__item"><a href="#contacts">Contact</a></li>
 					</ul>
-					<button class="burger__order" type="button" data-buy2-modal-open>
+					<button class="burger__order" type="button">
 						<span class="order__text">Buy now</span>
 						<svg height="12" width="12">
 							<use href="./images/icons.svg#icon-arrow"></use>
@@ -65,7 +65,7 @@
 
 		<div class="hero__anchors">
 			<a class="hero__products" href="#products">Products</a>
-			<a class="hero__how" href="#how">How it’s made? </a>
+			<a class="hero__how" href="#how">How it’s made?</a>
 		</div>
 
 		<a class="hero__description">
